Update latex doc
Updated LaTex documentation to cite the source of palindromes' jokes

--- a/assignment1/LaTex_documentation/Assignment1.tex
+++ b/assignment1/LaTex_documentation/Assignment1.tex
@@ -553,7 +553,7 @@ First, I take each character on our \textit{coolWord} one by one and add it to b
 
 Documentation is about explaining how the program works and how it was designed. But, it does not have to be just that, here are a few funny palindromes to sweeten this report:
 \\
-\\
+\\ % source: https://www.grammarly.com/blog/16-surprisingly-funny-palindromes/
 First we have a great bargain:\\
 A nut for a jar of tuna.\\
 But there's always someone unwilling to give up a nut, so he hired a hitman with the following pitch line:\\
